--- a/index.html
+++ b/index.html
@@ -1,11 +1,140 @@
 <!DOCTYPE html>
 <html lang="es">
+
     <head>
-
-
-
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
+        <link rel="stylesheet" href="style.css">
+        <title>Portfolio Personal || iGL3Hdev</title>
     </head>
+
     <body>
-        
+        <nav>
+            <div class="logo">
+                <img src="assets/logo.png">
+                <a href="#">iGL3Hdev</a>
+            </div>
+            <div class="nav-links">
+                <a href="#">Docs</a>
+                <a href="#">Projects</a>
+                <a href="#">Blog</a>
+                <a href="#">Youtube</a>
+                <a href="#">About</a>
+            </div>
+            <button><i class="ri-github-fill"></i>My Proyects</button>
+        </nav>
+
+        <div class="hero">
+            <div class="left-section">
+                <div class="top">
+                    <h2>Creative FullStack Web Developer</h2>
+                    <p>
+                        Desing and code beautifully simple proyects without overwhelming yourself with complexity. Enyoy
+                        your passion for creating with ease and love.
+                    </p>
+
+                    <div class="buttons">
+                        <button class="doc">Hire Me Now<i class="ri-arrow-right-line"></i></button>
+                        <button class="git"><i class="ri-github-fill"></i></button>
+                    </div>
+                </div>
+                <div class="bottom">
+                    <p>Oher Socials: </p>
+                    <div class="icons">
+                        <i class="ri-youtube-line"></i>
+                        <i class="ri-twitter-x-line"></i>
+                        <i class="ri-linkedin-box-line"></i>
+                        <i class="ri-instagram-line"></i>
+                    </div>
+                </div>
+            </div>
+
+            <img src="assets/hero.jpg">
+
+        </div>
+
+        <div class="about">
+            <p>About Web Development</p>
+            <h2>I create user-friendly, and beautiful websites and applications.</h2>
+            <div class="items">
+                <div class="item">
+                    <div class="inner">
+                        <img src="assets/item-1.jpg">
+                        <a href="#">Front-End Development</a>
+                        <p>Crafting visually appealing and responsive interfaces using HTML, CSS, and JavaScript frameworks
+                            live React and Vue.</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="inner">
+                        <img src="assets/item-2.jpg">
+                        <a href="#">Back-End Development</a>
+                        <p>Building robust and scalable server-side applications with Node.js, Express, and databases like
+                            MongoDB and SQL</p>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="inner">
+                        <img src="assets/item-3.jpg">
+                        <a href="#">Full-Stack Integration</a>
+                        <p>Seamlessly integrating front-end and back-end technologies to deliver comprehensive web solutions</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="projects">
+            <div class="inner">
+                <p class="debug"><i class="ri-command-line"></i>Troubleshoot & Debug</p>
+                <h2>Projects Showcase</h2>
+                <p class="info">Take a look at some of my notable projects, showcasing my ability to desing and develop effective
+                    web solutions.</p>
+                <button>Explore my projects<i class="ri-arrow-right-line"></i></button>
+
+                <div class="items">
+                    <div class="item">
+                        <i class="ri-shopping-bag-4-line"></i>
+                        <a href="#">E-Commerce</a>
+                        <p>Developed full-featured e-commerce platform with secure payments</p>
+                    </div>
+                    <div class="item">
+                        <i class="ri-id-card-line"></i>
+                        <a href="#">Portfolio Websites</a>
+                        <p>Designed and built a personal protfolio website to showcase my projects and skills.</p>
+                    </div>
+                    <div class="item">
+                        <i class="ri-apps-line"></i>
+                        <a href="#">Social Media App</a>
+                        <p>Created a social media application with real-time updates and user interactions.</p>
+                    </div>
+                    <div class="item">
+                        <i class="ri-news-line"></i>
+                        <a href="#">Blog Platform</a>
+                        <p>Built a dynamic blog platform with content management features.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contact">
+            <h2>Interested in Working together?</h2>
+            <div class="items">
+                <div class="item">
+                    <a href="#">Schedule a call</a>
+                    <p>Let´s discuss your project ideas and how I can help you</p>
+                    <button>Schedule a call</button>
+                </div>
+                <div class="item">
+                    <a href="#">Explore my Work</a>
+                    <p>View my portfolio to see the project ideas and how I can help you.</p>
+                    <button>View My Work</button>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <a href="#">Terms of Service</a>
+            <a href="#">Privacy Policy</a>
+        </footer>
     </body>
 </html>
