--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body>
         <nav>
             <div class="logo">
-                <img src="assets/logo.png">
+                <img src="assets/logo1.png">
                 <a href="#">iGL3Hdev</a>
             </div>
             <div class="nav-links">
