--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
                 <a href="#">Docs</a>
                 <a href="#">Projects</a>
                 <a href="#">Blog</a>
-                <a href="#">Youtube</a>
                 <a href="#">About</a>
             </div>
             <button><i class="ri-github-fill"></i>My Proyects</button>
@@ -28,7 +27,7 @@
         <div class="hero">
             <div class="left-section">
                 <div class="top">
-                    <h2>Creative FullStack Web Developer</h2>
+                    <h2>Creative Front-End Developer</h2>
                     <p>
                         Desing and code beautifully simple proyects without overwhelming yourself with complexity. Enyoy
                         your passion for creating with ease and love.
