--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <a href="#">Blog</a>
                 <a href="#">About</a>
             </div>
-            <button><i class="ri-github-fill"></i>My Proyects</button>
+            <a href="https://github.com/iGL3Hdev">
+            <button><i class="ri-github-fill"></i>Mis proyectos</button>
+            </a>
         </nav>
 
         <div class="hero">
@@ -29,13 +31,16 @@
                 <div class="top">
                     <h2>Creative Front-End Developer</h2>
                     <p>
-                        Desing and code beautifully simple proyects without overwhelming yourself with complexity. Enyoy
-                        your passion for creating with ease and love.
+                        Como diseñador front-end, me especializo en crear páginas web limpias, sencillas y minimalistas, 
+                        enfocándome en una experiencia de usuario intuitiva y estética moderna que destacan
+                        por su elegancia y funcionalidad
                     </p>
 
                     <div class="buttons">
                         <button class="doc">Hire Me Now<i class="ri-arrow-right-line"></i></button>
+                        <a href="https://github.com/iGL3Hdev">
                         <button class="git"><i class="ri-github-fill"></i></button>
+                        </a>
                     </div>
                 </div>
                 <div class="bottom">
