--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
 
-            <img src="assets/hero.jpg">
+            <img src="assets/Imagenes principal/principal4.jpg">
 
         </div>
 
