--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <div class="nav-links">
                 <a href="#">Docs</a>
                 <a href="#">Projects</a>
-                <a href="#">Blog</a>
-                <a href="#">About</a>
+                  <a href="#">About</a>
             </div>
             <a href="https://github.com/iGL3Hdev">
             <button><i class="ri-github-fill"></i>Mis proyectos</button>
@@ -29,9 +28,10 @@
         <div class="hero">
             <div class="left-section">
                 <div class="top">
-                    <h2>Creative Front-End Developer</h2>
+                    <h1>Carlos Iglesias</h1>
+                    <h2>Desarrollador Full-Stack</h2>
                     <p>
-                        Como diseñador front-end, me especializo en crear páginas web limpias, sencillas y minimalistas, 
+                        Como Desarrollador Full-Stack, me especializo en crear páginas web limpias, sencillas y minimalistas, 
                         enfocándome en una experiencia de usuario intuitiva y estética moderna que destacan
                         por su elegancia y funcionalidad
                     </p>
@@ -64,15 +64,15 @@
             <div class="items">
                 <div class="item">
                     <div class="inner">
-                        <img src="assets/item-1.jpg">
-                        <a href="#">Front-End Development</a>
+                        <img src="assets/scrum.jpg">
+                        <a href="#">Proyectos Agile</a>
                         <p>Crafting visually appealing and responsive interfaces using HTML, CSS, and JavaScript frameworks
-                            live React and Vue.</p>
+                            live React and Vue.añdkfjasldfja fadljas ñfsjkfa jfañsjfka sñf</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="inner">
-                        <img src="assets/item-2.jpg">
+                        <img src="assets/industria.jpg">
                         <a href="#">Back-End Development</a>
                         <p>Building robust and scalable server-side applications with Node.js, Express, and databases like
                             MongoDB and SQL</p>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="item">
                     <div class="inner">
-                        <img src="assets/item-3.jpg">
+                        <img src="assets/equipo.jpg">
                         <a href="#">Full-Stack Integration</a>
                         <p>Seamlessly integrating front-end and back-end technologies to deliver comprehensive web solutions</p>
                     </div>
@@ -91,7 +91,7 @@
         <div class="projects">
             <div class="inner">
                 <p class="debug"><i class="ri-command-line"></i>Troubleshoot & Debug</p>
-                <h2>Projects Showcase</h2>
+                <h2>Proyectos</h2>
                 <p class="info">Take a look at some of my notable projects, showcasing my ability to desing and develop effective
                     web solutions.</p>
                 <button>Explore my projects<i class="ri-arrow-right-line"></i></button>
