--- a/index.html
+++ b/index.html
@@ -5,66 +5,58 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.2.0/remixicon.min.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style1.css">
         <title>Portfolio Personal || iGL3Hdev</title>
     </head>
 
     <body>
         <nav>
-            <div class="logo">
-                <img src="assets/logo1.png">
-                <a href="#">iGL3Hdev</a>
-            </div>
+
             <div class="nav-links">
-                <a href="#">Docs</a>
-                <a href="#">Projects</a>
-                  <a href="#">About</a>
+                <a href="#hero">Sobre mi</a>
+                <a href="#about">Experiencia</a>
+                <a href="#project">Proyectos</a>
+                <a href="#contact">Contacto</a>
             </div>
-            <a href="https://github.com/iGL3Hdev">
+            <a href="https://github.com/iGL3Hdev?tab=repositories" target="_blank">
             <button><i class="ri-github-fill"></i>Mis proyectos</button>
             </a>
         </nav>
 
         <div class="hero">
             <div class="left-section">
+                <img src="/assets/logo1.png">
                 <div class="top">
-                    <h1>Carlos Iglesias</h1>
-                    <h2>Desarrollador Full-Stack</h2>
-                    <p>
+
+                    <h1>Carlos Iglesias Web Developer</h1>
+                     <p>
                         Como Desarrollador Full-Stack, me especializo en crear páginas web limpias, sencillas y minimalistas, 
                         enfocándome en una experiencia de usuario intuitiva y estética moderna que destacan
                         por su elegancia y funcionalidad
                     </p>
 
                     <div class="buttons">
-                        <button class="doc">Hire Me Now<i class="ri-arrow-right-line"></i></button>
-                        <a href="https://github.com/iGL3Hdev">
+                        <button class="doc">Mira mis perfiles<i class="ri-arrow-right-line"></i></button>
+                        <a href="https://github.com/iGL3Hdev" target="_blank">
                         <button class="git"><i class="ri-github-fill"></i></button>
+                        <a href="https://www.linkedin.com/in/carlosiglh/" target="_blank">
+                        <button class="link"><i class="ri-linkedin-box-line"></i></button>
                         </a>
-                    </div>
-                </div>
-                <div class="bottom">
-                    <p>Oher Socials: </p>
-                    <div class="icons">
-                        <i class="ri-youtube-line"></i>
-                        <i class="ri-twitter-x-line"></i>
-                        <i class="ri-linkedin-box-line"></i>
-                        <i class="ri-instagram-line"></i>
                     </div>
                 </div>
             </div>
 
-            <img src="assets/Imagenes principal/principal4.jpg">
+            <img src="assets/Imagenes principal/principal4.jpg" alt="" width="500" height="400">
 
         </div>
 
         <div class="about">
-            <p>About Web Development</p>
-            <h2>I create user-friendly, and beautiful websites and applications.</h2>
+            <p>Experiencia profesional</p>
+            <h2>Procesos industriales. MedioAmbiente. Gestión de Equipos</h2>
             <div class="items">
                 <div class="item">
                     <div class="inner">
-                        <img src="assets/scrum.jpg">
+                        <img src="assets/scrum.jpg" alt="" width="250" height="250">
                         <a href="#">Proyectos Agile</a>
                         <p>Crafting visually appealing and responsive interfaces using HTML, CSS, and JavaScript frameworks
                             live React and Vue.añdkfjasldfja fadljas ñfsjkfa jfañsjfka sñf</p>
@@ -72,17 +64,19 @@
                 </div>
                 <div class="item">
                     <div class="inner">
-                        <img src="assets/industria.jpg">
-                        <a href="#">Back-End Development</a>
+                        <img src="assets/industria.jpg" alt="" width="250" height="250">
+                        <a href="#">Procesos Industriales</a>
                         <p>Building robust and scalable server-side applications with Node.js, Express, and databases like
-                            MongoDB and SQL</p>
+                            MongoDB and SQL áf´dadñfaskjfapsofijaspojfqpweorjqweorjq`rjqwer`jqèrqwerq</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="inner">
-                        <img src="assets/equipo.jpg">
-                        <a href="#">Full-Stack Integration</a>
-                        <p>Seamlessly integrating front-end and back-end technologies to deliver comprehensive web solutions</p>
+                        <img src="assets/equipo.jpg" alt="" width="250" height="250">
+                        <a href="#">Gestión de Equipos</a>
+                        <p>Seamlessly integrating front-end and back-end technologies to deliver comprehensive web solutions
+                            ñakjfadfjpeirqpwoerjañdfkjaspdfoijqpoe
+                        </p>
                     </div>
                 </div>
             </div>
