--- a/index.html
+++ b/index.html
@@ -52,30 +52,40 @@
 
         <div class="about">
             <p>Experiencia profesional</p>
-            <h2>Procesos industriales. MedioAmbiente. Gestión de Equipos</h2>
+            <h2>Procesos industriales y MedioAmbiente. Gestión de Equipos</h2>
             <div class="items">
                 <div class="item">
                     <div class="inner">
                         <img src="assets/scrum.jpg" alt="" width="250" height="250">
                         <a href="#">Proyectos Agile</a>
-                        <p>Crafting visually appealing and responsive interfaces using HTML, CSS, and JavaScript frameworks
-                            live React and Vue.añdkfjasldfja fadljas ñfsjkfa jfañsjfka sñf</p>
+                        <p>
+                            Colaboración en proyectos Agile en comunicación continua con los desarrolladores,
+                            ejerciendo el rol de Scrum Master, con reuniones diarias para alinear los avances y
+                            resolver obstáculos rápidamente. Participando en equipos multifuncionales uniendo las 
+                            habilidades en ciclos cortos (sprints) para entregar incrementos del producto. Esta
+                            dinámica permite responder a cambios y mejorar el producto de forma iterativa y ágil.</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="inner">
                         <img src="assets/industria.jpg" alt="" width="250" height="250">
                         <a href="#">Procesos Industriales</a>
-                        <p>Building robust and scalable server-side applications with Node.js, Express, and databases like
-                            MongoDB and SQL áf´dadñfaskjfapsofijaspojfqpweorjqweorjq`rjqwer`jqèrqwerq</p>
+                        <p>Participacion en equipos de generación eléctrica, supervisando y optimizando las etapas
+                            del proceso para asegurar eficiencia y calidad. Coordinando equipos de ingeniería, calidad,
+                            mantenimiento y medioambiente para resolver problemas y mejorando el flujo de trabajo.
+                            Aplicando estándares de seguridad y normativas para minimizar riesgos y garantizar un
+                            entorno de trabajo seguro y eficiente.</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="inner">
                         <img src="assets/equipo.jpg" alt="" width="250" height="250">
                         <a href="#">Gestión de Equipos</a>
-                        <p>Seamlessly integrating front-end and back-end technologies to deliver comprehensive web solutions
-                            ñakjfadfjpeirqpwoerjañdfkjaspdfoijqpoe
+                        <p>Gestionar un equipo implica coordinar tareas, asignar responsabilidades y asegurar que
+                            cada miembro tenga los recursos necesarios para alcanzar los objetivos comunes. Es
+                            clave fomentar la comunicación abierta, ofrecer apoyo y dar feedback constante para
+                            potenciar el rendimiento individual y colectivo. Además, se debe supervisar el progreso
+                            y realizar ajustes según sea necesario para mantener al equipo alineado y motivado.
                         </p>
                     </div>
                 </div>
