--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 
                     <h1>Carlos Iglesias Web Developer</h1>
                      <p>
-                        Como Desarrollador Full-Stack, me especializo en crear páginas web limpias, sencillas y minimalistas, 
-                        enfocándome en una experiencia de usuario intuitiva y estética moderna que destacan
-                        por su elegancia y funcionalidad
+                        Como desarrollador full-stack soy capaz de construir aplicaciones completas, manejando tanto
+                        el frontend como el backend. En el frontend, creo interfaces de usuario atractivas y funcionales 
+                        con HTML, CSS, JavaScript y frameworks como React o Angular. En el backend, implemento la
+                        lógica de negocio y gestiono bases de datos utilizando tecnologías como Node.js y SQL. Poseo la
+                        versatilidad suficiente que me permite desarrollar y optimizar cada parte de la aplicación, logrando
+                        una experiencia de usuario sólida y un sistema confiable.
                     </p>
 
                     <div class="buttons">
@@ -94,17 +97,16 @@
 
         <div class="projects">
             <div class="inner">
-                <p class="debug"><i class="ri-command-line"></i>Troubleshoot & Debug</p>
                 <h2>Proyectos</h2>
-                <p class="info">Take a look at some of my notable projects, showcasing my ability to desing and develop effective
-                    web solutions.</p>
-                <button>Explore my projects<i class="ri-arrow-right-line"></i></button>
+                <p class="info">Eche un vistazo a algunos de mis proyectos más destacados, que demuestran mi capacidad
+                    para diseñar y desarrollar soluciones web eficaces</p>
+                <button>Visita mis proyectos<i class="ri-arrow-right-line"></i></button>
 
                 <div class="items">
                     <div class="item">
                         <i class="ri-shopping-bag-4-line"></i>
-                        <a href="#">E-Commerce</a>
-                        <p>Developed full-featured e-commerce platform with secure payments</p>
+                        <a href="#">Portfolio</a>
+                        <p>Diseñé y creé un sitio web personal para mostrar mis proyectos y habilidades.</p>
                     </div>
                     <div class="item">
                         <i class="ri-id-card-line"></i>
