--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 
     <body>
         <nav>
-
             <div class="nav-links">
-                <a href="#hero">Sobre mi</a>
-                <a href="#about">Experiencia</a>
-                <a href="#project">Proyectos</a>
-                <a href="#contact">Contacto</a>
+                <a href="#hero"><strong>Sobre mi</strong></a>
+                <a href="#about"><strong>Experiencia</strong></a>
+                <a href="#projects"><strong>Proyectos</strong></a>
+                <a href="#contact"><strong>Contacto</strong></a>
             </div>
             <a href="https://github.com/iGL3Hdev?tab=repositories" target="_blank">
             <button><i class="ri-github-fill"></i>Mis proyectos</button>
             </a>
         </nav>
 
-        <div class="hero">
+        <div class="hero" id="hero">
             <div class="left-section">
                 <img src="/assets/logo1.png">
                 <div class="top">
@@ -43,24 +42,22 @@
                         <a href="https://github.com/iGL3Hdev" target="_blank">
                         <button class="git"><i class="ri-github-fill"></i></button>
                         <a href="https://www.linkedin.com/in/carlosiglh/" target="_blank">
-                        <button class="link"><i class="ri-linkedin-box-line"></i></button>
+                        <button class="link"><i class="ri-linkedin-box-fill"></i></button>
                         </a>
                     </div>
                 </div>
             </div>
-
             <img src="assets/Imagenes principal/principal4.jpg" alt="" width="500" height="400">
-
         </div>
 
-        <div class="about">
+        <div class="about" id="about">
             <p>Experiencia profesional</p>
             <h2>Procesos industriales y MedioAmbiente. Gestión de Equipos</h2>
             <div class="items">
                 <div class="item">
                     <div class="inner">
                         <img src="assets/scrum.jpg" alt="" width="250" height="250">
-                        <a href="#">Proyectos Agile</a>
+                        <a href="#"><strong>Proyectos Agile</strong></a>
                         <p>
                             Colaboración en proyectos Agile en comunicación continua con los desarrolladores,
                             ejerciendo el rol de Scrum Master, con reuniones diarias para alinear los avances y
@@ -72,7 +69,7 @@
                 <div class="item">
                     <div class="inner">
                         <img src="assets/industria.jpg" alt="" width="250" height="250">
-                        <a href="#">Procesos Industriales</a>
+                        <a href="#"><strong>Procesos Industriales</strong></a>
                         <p>Participacion en equipos de generación eléctrica, supervisando y optimizando las etapas
                             del proceso para asegurar eficiencia y calidad. Coordinando equipos de ingeniería, calidad,
                             mantenimiento y medioambiente para resolver problemas y mejorando el flujo de trabajo.
@@ -83,7 +80,7 @@
                 <div class="item">
                     <div class="inner">
                         <img src="assets/equipo.jpg" alt="" width="250" height="250">
-                        <a href="#">Gestión de Equipos</a>
+                        <a href="#"><strong>Gestión de Equipos</strong></a>
                         <p>Gestionar un equipo implica coordinar tareas, asignar responsabilidades y asegurar que
                             cada miembro tenga los recursos necesarios para alcanzar los objetivos comunes. Es
                             clave fomentar la comunicación abierta, ofrecer apoyo y dar feedback constante para
@@ -95,7 +92,7 @@
             </div>
         </div>
 
-        <div class="projects">
+        <div class="projects" id="projects">
             <div class="inner">
                 <h2>Proyectos</h2>
                 <p class="info">Eche un vistazo a algunos de mis proyectos más destacados, que demuestran mi capacidad
@@ -104,14 +101,14 @@
 
                 <div class="items">
                     <div class="item">
-                        <i class="ri-shopping-bag-4-line"></i>
+                        <i class="ri-id-card-line"></i>
                         <a href="#">Portfolio</a>
-                        <p>Diseñé y creé un sitio web personal para mostrar mis proyectos y habilidades.</p>
+                        <p>Diseño y creación de un sitio web personal para mostrar mis proyectos y habilidades.</p>
                     </div>
                     <div class="item">
-                        <i class="ri-id-card-line"></i>
-                        <a href="#">Portfolio Websites</a>
-                        <p>Designed and built a personal protfolio website to showcase my projects and skills.</p>
+                        <i class="ri-sun-cloudy-line"></i>
+                        <a href="#">Web del tiempo</a>
+                        <p>Diseño de una aplicación Web del clima, para consulta del tiempo que va a hacer en cualquier ciudad</p>
                     </div>
                     <div class="item">
                         <i class="ri-apps-line"></i>
@@ -126,18 +123,15 @@
                 </div>
             </div>
         </div>
-        <div class="contact">
-            <h2>Interested in Working together?</h2>
+        <div class="contact" id="contact">
+            <h2>¿Interesado en trabajar conmigo?</h2>
             <div class="items">
                 <div class="item">
-                    <a href="#">Schedule a call</a>
-                    <p>Let´s discuss your project ideas and how I can help you</p>
-                    <button>Schedule a call</button>
-                </div>
-                <div class="item">
-                    <a href="#">Explore my Work</a>
-                    <p>View my portfolio to see the project ideas and how I can help you.</p>
-                    <button>View My Work</button>
+                    <a href="#">Contacto</a>
+                    <p>Envíame un correo y hablemos del proyecto y cómo puedo ayudarle</p>
+                    <button>
+                    <a href="mailto:igl3hdev@gmail.com?Subject=Interesado%20en%20el%20curso">Correo</a>
+                    </button>
                 </div>
             </div>
         </div>
