Finalizada con enlace web tiempo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
                     <div class="item">
                         <i class="ri-sun-cloudy-line"></i>
-                        <a href="#">Web del tiempo</a>
+                        <a href="https://apptiempoweb.netlify.app/" target="_blank">Web del tiempo</a>
                         <p>Diseño de una aplicación Web del clima, para consulta del tiempo que va a hacer en cualquier ciudad</p>
                     </div>
                     <div class="item">
