--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
                     <div class="item">
                         <i class="ri-id-card-line"></i>
                         <a href="#">Portfolio</a>
-                        <p>Diseño y creación de un sitio web personal para mostrar mis proyectos y habilidades.</p>
+                        <p>Diseño y creación de un sitio web personal para mostrar mis proyectos y habilidades, mediante HTML y CSS</p>
                     </div>
                     <div class="item">
                         <i class="ri-sun-cloudy-line"></i>
                         <a href="https://apptiempoweb.netlify.app/" target="_blank">Web del tiempo</a>
-                        <p>Diseño de una aplicación Web del clima, para consulta del tiempo que va a hacer en cualquier ciudad</p>
+                        <p>Diseño de una aplicación Web del clima, para consulta del tiempo que va a hacer en cualquier ciudad.
+                            Utilizando HTML, CSS y JavaScript
+                        </p>
                     </div>
                     <div class="item">
                         <i class="ri-apps-line"></i>
