--- a/index.html
+++ b/index.html
@@ -103,24 +103,23 @@
                     <div class="item">
                         <i class="ri-id-card-line"></i>
                         <a href="#">Portfolio</a>
-                        <p>Diseño y creación de un sitio web personal para mostrar mis proyectos y habilidades, mediante HTML y CSS</p>
+                        <p>Diseño y creación de un sitio web personal para mostrar mis proyectos y habilidades, mediante HTML y CSS.</p>
                     </div>
                     <div class="item">
                         <i class="ri-sun-cloudy-line"></i>
                         <a href="https://apptiempoweb.netlify.app/" target="_blank">Web del tiempo</a>
-                        <p>Diseño de una aplicación Web del clima, para consulta del tiempo que va a hacer en cualquier ciudad.
-                            Utilizando HTML, CSS y JavaScript
+                        <p>Diseño de una aplicación Web del clima, consulta del tiempo en cualquier ciudad. Utilizando HTML, CSS y JavaScript.
                         </p>
                     </div>
                     <div class="item">
                         <i class="ri-apps-line"></i>
-                        <a href="#">Social Media App</a>
-                        <p>Created a social media application with real-time updates and user interactions.</p>
+                        <a href="https://github.com/iGL3Hdev/Gestion-Aeropuerto" target="_blank">Gestión Aeropuerto.</a>
+                        <p>Aplicación en Java de gestión de datos en aeropuertos</p>
                     </div>
                     <div class="item">
-                        <i class="ri-news-line"></i>
-                        <a href="#">Blog Platform</a>
-                        <p>Built a dynamic blog platform with content management features.</p>
+                        <i class="ri-shopping-bag-4-line"></i>
+                        <a href="https://panel-control-comercio.vercel.app/" target="_blank">Panel Control Comercio</a>
+                        <p>Panel de gestión de ventas de una tienda online, mediante HTML, CSS y JavaScript.</p>
                     </div>
                 </div>
             </div>
@@ -141,6 +140,7 @@
         <footer>
             <a href="#">Terms of Service</a>
             <a href="#">Privacy Policy</a>
+            <a href="#">iGL3Hdev</a>
         </footer>
     </body>
 </html>
